--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@ layout: compress
     <meta name="description" content="{% if page.title %}{{ page.title }}{% else %}{{ site.description }}{% endif %}" />
     <meta name="keywords" content="{% if page.title %}{{ page.title }}, {{ site.title }}, {% for categ in page.categories %}{{ categ }}{% if forloop.last == false %}, {% endif %}{% endfor %}{% else %}{{ site.title }}, {% for category in site.categories %}{% capture categories_slug %}{{ category | first }}{% endcapture %}{% for categ in categories_slug %}{{ categ }}{% endfor %}{% if forloop.last == false %}, {% endif %}{% endfor %}{% endif %}" />
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
+    
+    <meta content="ko_KR" property="og:locale">
+    <meta content="en_US" property="og:locale:alternate">
+
     <meta content="{{ site.share.fb_appid }}" property="fb:app_id">
     <meta content="{{ site.title }}" property="og:site_name">
 
@@ -45,6 +49,8 @@ layout: compress
 
     {% if page.image %}
       <meta content="{{ site.url }}/static/img/posts/{{ page.image }}" property="og:image">
+    {% else %}
+      <meta content="/static/img/desk.jpg" property="og:image">
     {% endif %}
 
     {% if page.categories %}
@@ -81,6 +87,8 @@ layout: compress
 
     {% if page.header-img %}
       <meta name="twitter:image:src" content="{{ site.url }}/{{ page.header-img }}">
+      {% else %}
+      <meta name="twitter:image:src" content="/static/img/desk.jpg">
     {% endif %}
 
     <!-- Font awesome icons -->
@@ -114,7 +122,7 @@ layout: compress
     <div class="container">
       <div class="col-sm-3">
         <div class="fixed-condition">
-          <h1 class="author-name"><a href="/">{{ site.author }}</a></h1>
+          <a href="/"><img class="author-profile" src="{{ site.profile }}"></img></a>
           {% if site.about %}
             <div class="profile-about">
               {{ site.about }}
@@ -128,13 +136,13 @@ layout: compress
             </ul>
           </div>
           <div class="search" id="js-search">
-            <input type="text" placeholder="(sitemap)~$ type to search" class="search__input form-control" id="js-search__input">
+            <input type="text" placeholder="" class="search__input form-control" id="js-search__input">
             <ul class="search__results" id="js-search__results"></ul>
           </div>
           <hr />
           <ul class="sidebar-nav">
             <strong>Navigation</strong>
-            <li><a href="/">Home</a></li>
+            <li><a href="/">All</a></li>
             {% for i in site.urls %}
               <li><a class="about" href="{{ i.url }}">{{ i.text }}</a></li>
             {% endfor %}
@@ -142,17 +150,14 @@ layout: compress
         </div>
         <!-- end /.fixed-condition -->
       </div>
+
       <div class="col-sm-8 col-offset-1 main-layout">
         {{ content }}
         <footer>
           &copy; {{ site.author }}
           {% if site.github %}
-            - <a href="{{ site.github }}">{{ site.github }}</a> - Powered by Jekyll.
+            - Powered by Jekyll & Use <a href="https://github.com/agusmakmun/agusmakmun.github.io">Agus Makmun</a> Theme
           {% endif %}
-          <div class="btn-github" style="float:right;">
-            <iframe src="https://ghbtns.com/github-btn.html?user=agusmakmun&repo=agusmakmun.github.io&type=star&count=true" frameborder="0" scrolling="0" width="100" height="20px"></iframe>
-            <iframe src="https://ghbtns.com/github-btn.html?user=agusmakmun&repo=agusmakmun.github.io&type=fork&count=true" frameborder="0" scrolling="0" width="100" height="20px"></iframe>
-          </div>
         </footer>
       </div>
       <!-- end /.col-sm-8 -->
