--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,16 +5,26 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
 </header>
 
-<span class="time">{{ page.date | date_to_string }}</span>
+<span class="time">{{ page.date  | date: "%Y-%m-%d" }}</span>
+
 {% if page.categories %}
   <span class="categories">
-    &raquo; {% for category in page.categories %}<a href="/category/{{ category }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
+    &raquo; 
+    {% for category in page.categories %}
+      {% if category != 'blog' %}
+        <a href="/category/{{ category }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}
+      {% endif %}
+    {% endfor %}
   </span>
 {% endif %}
 
+<hr />
+
 <div class="content">
   <div class="post">{{ content }}</div>
-  {% include share-page.html %}
+  <br />
+  <br />
+
 </div>
 
 {% assign hasSimilar = '' %}
