--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+
 <header class="post-header">
   <h1 class="post-title">Category</h1>
 </header>
@@ -26,5 +27,6 @@ layout: default
       <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <i><span>{{ post.date | date: "%Y-%m-%d" }}</span></i>
       </li>
     </ul>
-  {% endfor %}
+    {% endfor %}
+  </div>
 </div>
