--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,176 +1,222 @@
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1.5em;
-  font-weight: 300;
-  color: #666;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.5em;
+    font-weight: 300;
+    color: #666;
 }
+
 hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: 0;
-  border-top: 1px solid #F7F1F1;
-  border-bottom: 1px solid #fff;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #f7f1f1;
+    border-bottom: 1px solid #fff;
 }
-span.time, span.categories {
-  color: #ADADAD;
-  margin-bottom: 5px;
-  font-size: 11px;
-  text-transform: uppercase;
+
+span.time,
+span.categories {
+    color: #adadad;
+    margin-bottom: 5px;
+    font-size: 11px;
+    text-transform: uppercase;
 }
-h1, h2, h3 {
-  color: #696969;
-  font-weight: normal;
+
+h1,
+h2,
+h3 {
+    color: #696969;
+    font-weight: normal;
 }
+
 h1 {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
-h2, h3 {
-  margin-bottom: 5px;
+
+h2,
+h3 {
+    margin-bottom: 5px;
 }
-a, a:link, a:active {
-  text-decoration: none;
-  color: #e68600;
+
+a,
+a:link,
+a:active {
+    text-decoration: none;
+    color: #e68600;
 }
+
 a:hover {
-  color: #B3B3B3;
-  text-decoration: underline;
+    color: #b3b3b3;
+    text-decoration: underline;
 }
+
 
 /* Layout */
+
 .main-layout {
-  background: #fff;
-  padding-top: 15px;
-}
-.sidebar-nav {
-  margin: 0;
-  padding: 0;
-}
-.sidebar-nav li {
-  margin: 0;
-  list-style: none;
-}
-.sidebar-nav li::before {
-  content: "»";
-  margin-right: .5em;
+    background: #fff;
+    padding-top: 15px;
 }
 
+.sidebar-nav {
+    margin: 0;
+    padding: 0;
+}
+
+.sidebar-nav li {
+    margin: 0;
+    list-style: none;
+}
+
+.sidebar-nav li::before {
+    content: "»";
+    margin-right: 0.5em;
+}
+
+
 /* Content */
+
 div.content pre {
-  background: #333333;
-  padding: 10px;
-  color: #FFF;
-  overflow-x: auto;
-  font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
-  font-size: 12px;
-  border: none;
+    background: #333333;
+    padding: 10px;
+    color: #fff;
+    overflow-x: auto;
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+    font-size: 12px;
+    border: none;
+}
+
+.wrapper {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.container {
+    flex: 1;
 }
 
 footer {
-  border-top: 1px solid #F7F1F1;
-  width: 100%;
-  height: 10px;
-  margin-top: 10px;
-  margin-bottom: 3em;
-  padding-top: 10px;
-  color: #C2C2C2;
-  font-size: 11px;
-  bottom: 0;
-  padding-bottom: 10px;
-}
-div.post-content .btn-tags {
-  margin-bottom: 3px;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 3em;
+    padding-top: 10px;
+    color: #c2c2c2;
+    font-size: 11px;
+    bottom: 0;
+    padding-bottom: 10px;
+    clear: both;
+    padding: 20px;
 }
 
-/* Left column */
-div.col-sm-3 {
-  margin-top: 100px;
-  font-size: 11px;
-  color: #666;
+div.post-content .btn-tags {
+    margin-bottom: 3px;
 }
-div.col-sm-3 strong {
-  font-size: 16px;
-  color: #4A4A4A;
-  font-weight: normal;
-}
-div.col-sm-3 div.profile-about {
-  margin-top: 10px;
-  color: #8C8C8C;
-}
+
 
 /* Pagination */
+
 .PageNavigation {
-  font-size: 14px;
-  display: block;
-  width: auto;
-  overflow: hidden;
-}
-.PageNavigation a {
-  display: block;
-  width: 50%;
-  float: left;
-  margin: 1em 0;
-}
-.PageNavigation .next {
-  text-align: right;
-}
-.PageNavigation .prev {
-  text-align: left;
+    font-size: 14px;
+    display: block;
+    width: auto;
+    overflow: hidden;
 }
 
+.PageNavigation a {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: 1em 0;
+}
+
+.PageNavigation .next {
+    text-align: right;
+}
+
+.PageNavigation .prev {
+    text-align: left;
+}
+
+
 /* Social Icons */
-.social{
-  display: block;
-  margin: 10px 0;
+
+.social {
+    display: block;
+    margin: 10px 0;
 }
+
 .social ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
+
 .social ul li {
-  display: inline-block;
-  margin: 0 5px;
+    display: inline-block;
+    margin: 0 5px;
 }
+
 .social li a {
-  font-size: 16px;
-  color: #969394;
+    font-size: 16px;
+    color: #969394;
 }
+
 .social li a:hover {
-  color: #6D6D6D;
+    color: #6d6d6d;
 }
 
 .share-page {
-  padding: 10px 10px 5px;
-  border-top: 1px solid #f0f0f0;
-  border-bottom: 1px solid #f0f0f0;
+    padding: 10px 10px 5px;
+    border-top: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0;
 }
+
 .post-content img,
 .content img {
-  max-width: 100%
+    max-width: 100%;
 }
 
 .author-profile {
-  height: 120px;
-  width: 120px;
-  border-radius: 50%;
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
 }
+
+.sidebar-layout {
+    padding: 15px;
+    margin-top: 40px;
+    font-size: 11px;
+    color: #666;
+}
+
+.sidebar-layout strong {
+    font-size: 16px;
+    color: #4a4a4a;
+    font-weight: normal;
+}
+
+.sidebar-layout .profile-about {
+    margin-top: 10px;
+    color: #8c8c8c;
+}
+
 
 /* Responsive Conditional */
+
 @media (min-width: 1024px) {
-  .fixed-condition {
-    position: fixed;
-    max-width: 200px;
-  }
+    .sidebar-layout {
+        position: fixed;
+        max-width: 200px;
+    }
 }
+
 @media (max-width: 768px) {
-  div.col-sm-3 {
-    margin-top: 30px;
-  }
-
-  .author-profile {
-    height: 90px;
-    width: 90px;
-  }
+    div.col-sm-3 {
+        margin-top: 30px;
+    }
+    .author-profile {
+        height: 90px;
+        width: 90px;
+    }
 }
-
-
