--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
 </header>
 
-<span class="time">{{ page.date  | date: "%Y-%m-%d" }}</span>
+<span class="time">{{ page.date  | date: "%Y-%m-%d %R" }}</span>
 
 {% if page.categories %}
   <span class="categories">
